--- a/templates/admin_panel/clinic/add.html.twig
+++ b/templates/admin_panel/clinic/add.html.twig
@@ -2,9 +2,17 @@
 
 {% block content %}
     <h1>Dodaj poradnie</h1>
-    {{ form_start(form) }}
-    {{ form_row(form.name)}}
-    {{ form_row(form.submit) }}
+    {{ form_start(form, {'attr': {'class': 'form', 'autocomplete':'off'}}) }}
+    <div class="form-item-col">
+        {{ form_label(form.name, 'Nazwa poradni', {'attr': {'class' : 'form-label'}} ) }}
+        {% if form_errors(form.name) %}
+            {{ form_widget(form.name, {'attr': {'class' : 'form-input form-input--error'}} ) }}
+        {% else %}
+            {{ form_widget(form.name, {'attr': {'class' : 'form-input'}} ) }}
+        {% endif %}
+        <span class="form-error">{{ form_errors(form.name) }}</span>
+    </div>
+    <button class="form-btn">Dodaj</button>
     {{ form_end(form) }}
 
 {% endblock %}
