--- a/templates/admin_panel/doctor/index.html.twig
+++ b/templates/admin_panel/doctor/index.html.twig
@@ -18,22 +18,22 @@
             <th>Status</th>
             <th colspan="2">Akcje</th>
         </tr>
-    {% for lekarz in lekarze %}
+    {% for d in doctors %}
         <tr>
-            <td>{{ lekarz.id }}</td>
-            <td>{{ lekarz.numerPWZ }}</td>
-            <td>{{ lekarz.nazwisko ~ ' ' ~ lekarz.imie }}</td>
-            <td>{{ lekarz.specjalizacja }}</td>
-            {% if lekarz.status == 1 %}
+            <td>{{ d.id }}</td>
+            <td>{{ d.NumPwz }}</td>
+            <td>{{ d.lastName ~ ' ' ~ d.name }}</td>
+            <td>{{ d.spec }}</td>
+            {% if d.status == 1 %}
             <td>Aktywny</td>
             {% else %}
             <td>Nieaktywny</td>
             {% endif %}
-            <td><a class="link-blue" href="{{ path('admin.lekarz_edit', {'id':lekarz.id}) }}">Edytuj</a></td>
-            <td><a class="delete" href="{{ path('admin.lekarz_delete', {'id':lekarz.id}) }}">Usuń</a></td>
+            <td><a class="link-blue" href="{{ path('admin.doctor_edit', {'id':d.id}) }}">Edytuj</a></td>
+            <td><a class="delete" href="{{ path('admin.doctor_delete', {'id':d.id}) }}">Usuń</a></td>
         </tr>
     {% endfor %}
     </table>
-    <a href="{{ path('admin.lekarz_add') }}">Dodaj lekarza</a>
+    <a href="{{ path('admin.doctor_add') }}">Dodaj lekarza</a>
 
 {% endblock %}
