--- a/templates/admin_panel/unit/add.html.twig
+++ b/templates/admin_panel/unit/add.html.twig
@@ -1,7 +1,7 @@
 {% extends 'admin_panel/index.html.twig' %}
 
 {% block content %}
-     <h1>{{ clinic.nazwa }}</h1>
+     <h1>{{ clinic.name }}</h1>
      <h3>Dodaj lekarza do poradni</h3>
      <table class="admin-table">
           <tr>
@@ -12,11 +12,11 @@
           </tr>
           {% for d in doctors %}
                <tr>
-                    <td>{{ d.numPwz }}</td>
-                    <td>{{ d.lastName ~ ' ' ~ d.name }}</td>
+                    <td>{{ d.num_pwz }}</td>
+                    <td>{{ d.last_name ~ ' ' ~ d.name }}</td>
                     <td>{{ d.spec }}</td>
                     <td>
-                         <a class="add" href="{{ path('admin.unit_create', {idDoctor: d.id, idCLinic: clinc.id}) }}">Dodaj</a>
+                         <a class="add" href="{{ path('admin.unit_create', {'idDoctor': d.id, 'idClinic': clinic.id}) }}">Dodaj</a>
                     </td>
                </tr>
           {% endfor %}
