--- a/templates/admin_panel/work_time/index.html.twig
+++ b/templates/admin_panel/work_time/index.html.twig
@@ -27,8 +27,8 @@
     {% for t in time %}
         <tr>
             <td>{{ nameOfDay(t.day) }}</td>
-            <td>{{ c.start|date("H:i") }}</td>
-            <td>{{ c.koniec|date("H:i") }}</td>
+            <td>{{ t.start|date("H:i") }}</td>
+            <td>{{ t.end|date("H:i") }}</td>
             <td><a class="delete" href="{{ path('admin.work_time-delete', {'id':t.id, 'idUnit': id}) }}">Usuń</a></td>
         </tr>
     {% endfor %}
