--- a/templates/admin_panel/index.html.twig
+++ b/templates/admin_panel/index.html.twig
@@ -14,25 +14,25 @@
                 ] %} 
                 class="active"{% endif %} href="{{ path('admin.users') }}">Użytkownicy</a>
             <a {% if app.request.attributes.get('_route') in [
-                'admin.poradnie',
-                'admin.poradnia_add',
+                'admin.clinics_show',
+                'admin.clinic_add',
                 ] %} 
                 class="active"{% endif %}  href="{{ path('admin.clinics_show') }}">Poradnie</a>
                 <a {% if app.request.attributes.get('_route') in [
                 'admin.unit',
-                'admin.jednostka_show',
-                'admin.jednostka_add',
+                'admin.unit_show',
+                'admin.unit_add',
                 ] %} 
                 class="active"{% endif %}  href="{{ path('admin.unit') }}">Jednostka</a>
             <a {% if app.request.attributes.get('_route') in [
-                'admin.lekarze',
-                'admin.lekarz_add',
+                'admin.doctors',
+                'admin.doctor_add',
                 ] %}
                 class="active"{% endif %}  href="{{ path('admin.doctors') }}">Lekarze</a>
             <a {% if app.request.attributes.get('_route') in [
-                'admin.visit',
+                'admin.visits',
                 ] %}
-                class="active"{% endif %}  href="{{ path('admin.visit') }}">Wizyty</a>
+                class="active"{% endif %}  href="{{ path('admin.visits') }}">Wizyty</a>
         </div>
     {% endblock sidebar %}
     <div class="content">
