--- a/templates/visit/reservation.html.twig
+++ b/templates/visit/reservation.html.twig
@@ -11,20 +11,16 @@
 
     <h1>{{ clinic.name }}</h1>
     <h2>{{doctor.name ~ ' ' ~ doctor.lastName}}</h2>
-{#    <h2>Data</h2>#}
-{#    <p>{{start|format_datetime('short', 'none',locale='pl')}}</p>#}
-{#    <h2>Godzina rozpoczęcia</h2>#}
-{#    <p>{{start|format_datetime('none', 'short',locale='pl')}}</p>#}
-{#    <h2>Przewidywana godzina zakończenia</h2>#}
-{#    <p>{{end|format_datetime('none', 'short', locale='pl')}}</p>#}
+    <h2>Data</h2>
+    <p>{{start|date("Y-m-d")}}</p>
+    <h2>Godzina rozpoczęcia</h2>
+    <p>{{start|date("H:i")}}</p>
+    <h2>Przewidywana godzina zakończenia</h2>
+    <p>{{end|date("H:i")}}</p> 
+
     {{ form_start(form) }}
     {{ form_errors(form) }}
-    {{ form_label(form.start, 'Planowana data wizyty') }}
-    {{ form_widget(form.start, { 'attr':{'disabled':'true'} }) }}
-{#    {{ form_label(form.start, 'Planowana godzina rozpoczęcia') }}#}
-{#    {{ form_widget(form.start, { 'attr':{'disabled':'disabled'} }) }}#}
-    {{ form_label(form.end, 'Planowana data zakończenia wizyty') }}
-    {{ form_widget(form.end, { 'attr':{'disabled':'true'} }) }}
+
     {{ form_widget(form.submit, {'attr':{'class':'form-btn'}})}}
 
     {{ form_end(form)}}
