--- a/templates/visit/reservation.html.twig
+++ b/templates/visit/reservation.html.twig
@@ -12,11 +12,11 @@
     <h1>{{ clinic.name }}</h1>
     <h2>{{doctor.name ~ ' ' ~ doctor.lastName}}</h2>
     <h2>Data</h2>
-    <p>{{start|date("Y-m-d")}}</p>
+    <p>{{start|date("Y-m-d") ~ ' ' ~ nameOfDay(start|date('w'))}}</p>
     <h2>Godzina rozpoczęcia</h2>
     <p>{{start|date("H:i")}}</p>
     <h2>Przewidywana godzina zakończenia</h2>
-    <p>{{end|date("H:i")}}</p> 
+    <p>{{end|date("H:i")}}</p>
 
     {{ form_start(form) }}
     {{ form_errors(form) }}
@@ -25,7 +25,6 @@
 
     {{ form_end(form)}}
 
-    {{ dump(test) }}
 </div>
 
 
