--- a/templates/admin_panel/index.html.twig
+++ b/templates/admin_panel/index.html.twig
@@ -3,10 +3,9 @@
 {% block title %}Panel administratora{% endblock %}
 
 {% block body %}
-<div class="admin-grid-container">
     {% block sidebar %}
-        <div class="sidebar">
-        <h3>Panel administratora</h3>
+        <div class="sidebar" id="sidebar">
+            <a href="#" class="close" onclick="closeSlideMenu()" style="color: white;">Zamknij</a>
             <a {% if app.request.attributes.get('_route') in [
                 'admin.users',
                 'admin.add_user',
@@ -35,9 +34,51 @@
                 class="active"{% endif %}  href="{{ path('admin.visits') }}">Wizyty</a>
         </div>
     {% endblock sidebar %}
-    <div class="content">
+    <div class="content" id="content">
+        <a href="#" onclick="openSlideMenu()" style="color: black;">Menu</a>
+        <div class="table-div">
+
         {% block content %}
         {% endblock content %}
   </div>   
 </div>
+
+    <script>
+
+        function closeSlideMenu(){
+            document.getElementById('sidebar').style.width = '0';
+            document.getElementById('content').style.marginLeft = '0';
+            document.getElementById('sidebar').style.transition = '0.7s';
+            document.getElementById('content').style.transition = 'margin-left 0.7s';
+            localStorage.setItem("toggle", "no");
+
+        }
+        function openSlideMenu(){
+            document.getElementById('sidebar').style.width = '250px';
+            document.getElementById('content').style.marginLeft = '250px';
+            document.getElementById('sidebar').style.transition = '0.7s';
+            document.getElementById('content').style.transition = 'margin-left 0.7s';
+            localStorage.setItem("toggle", "yes");
+
+        }
+
+        if (localStorage.getItem("toggle") === null) {
+            document.getElementById('sidebar').style.width = '250px';
+            document.getElementById('content').style.marginLeft = '250px';
+            document.getElementById('sidebar').style.transition = '0s';
+            document.getElementById('content').style.transition = 'margin-left 0s';
+            localStorage.setItem("toggle", "no");
+
+        }else{
+            if(localStorage.getItem("toggle") === "yes"){
+                document.getElementById('sidebar').style.width = '250px';
+                document.getElementById('content').style.marginLeft = '250px';
+            }else{
+                document.getElementById('sidebar').style.width = '0';
+                document.getElementById('content').style.marginLeft = '0';
+                document.getElementById('sidebar').style.transition = '0s';
+                document.getElementById('content').style.transition = 'margin-left 0s';
+            }
+        }
+    </script>
 {% endblock body %}
