poprawione filtry - DRY

--- a/templates/admin_panel/index.html.twig
+++ b/templates/admin_panel/index.html.twig
@@ -22,7 +22,7 @@
                 'admin.unit_show',
                 'admin.unit_add',
                 ] %} 
-                class="active"{% endif %}  href="{{ path('admin.unit') }}">Jednostka</a>
+                class="active"{% endif %}  href="{{ path('admin.unit') }}">Jednostki</a>
             <a {% if app.request.attributes.get('_route') in [
                 'admin.doctors',
                 'admin.doctor_add',
