--- a/templates/admin_panel/visit/_filters.html.twig
+++ b/templates/admin_panel/visit/_filters.html.twig
@@ -4,6 +4,8 @@
     {{ form_widget(form.clinic) }}
 {#    {{ form_label(form.doctor, 'Lekarze: ') }}#}
 {#    {{ form_widget(form.doctor) }}#}
+    {{ form_label(form.type, 'Wizyty: ') }}
+    {{ form_widget(form.type) }}
 {{ form_end(form) }}
 
 <script>
